# ssl-ball-detection

./: color_detection.py
cpp/include/: balldetector.h  centroidcalculator.h  colordetectorbase.h  colorextractor.h  detectorangeball.h  imagedisplayer.h  imageprocessor.h  proccessimage.h  processimage.h  videocapture.h
cpp/src/: balldetector.cpp  centroidcalculator.cpp  colordetectorbase.cpp  colorextractor.cpp  detectorangeball.cpp  imagedisplayer.cpp  imageprocessor.cpp  main.cpp  proccessimage.cpp  processimage.cpp  videocapture.cpp
py/: README.md  color_detection.py  hsvtester.py  main.py  pyproject.toml  robot_communicator.py  tester.py  thresholds.json  thresholds.txt
